--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jasmine": "^4.0.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
+    "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
