--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "test": "npm run build && jasmine",
+    "migrate": "db-migrate up",
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
     "lint:f": "eslint src/**/*.ts --fix"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jasmine": "^4.0.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@types/pg": "^8.6.5",
@@ -35,10 +38,14 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3"
   }
