--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "test": "npm run build && jasmine",
+    "test2": "set NODE_ENV=test && db-migrate up --env test && tsc && jasmine && db-migrate reset",
     "migrate": "db-migrate up",
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
@@ -24,6 +25,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@types/pg": "^8.6.5",
+    "@types/request": "^2.48.8",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
@@ -31,8 +33,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine": "^4.2.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.0",
+    "request": "^2.88.2",
     "supertest": "^6.2.3",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
