--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run build && node build/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "test": "set NODE_ENV=test && db-migrate up --env test && npm run build && jasmine && db-migrate reset",
+    "test": "set NODE_ENV=test && db-migrate up --env test && npm run build && jasmine && db-migrate reset --env test",
     "migrate": "db-migrate up",
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
